Fix Collapse errors

--- a/src/assets/scss/modules/Collapse.module.scss
+++ b/src/assets/scss/modules/Collapse.module.scss
@@ -55,9 +55,19 @@ section.Collapse {
     p.CollapseContent {
         display: flex;
         background-color: var(--collapse-background);
-        padding: 10px;
+        margin: 2em 1em;
         z-index: 49;
         overflow: hidden;
         transition: height 0.3s ease;
+        color: var(--tonic);
+        line-height: 1.5;
+    }
+
+    ul {
+        display: flex;
+        flex-direction: column;
+        margin: 2em 1em;
+        row-gap: .5em;
+        color: var(--tonic);
     }
 }
